# Sapphire

./: Cargo.toml  README.md  kernel_layout.ld  x86-unknown-bare-metal.json
.cargo/: config.toml
src/: chunkymonkey_z80.rs  graphics.rs  ibm_vga8x16.rs  ibm_vga8x8.rs  main.rs  tvga.rs  vga.rs
src/boot/: .gitignore  GDT.cpp  Makefile  Makefile.linux  Makefile.old  linker.ld
src/boot/chainloader/: chainloader.asm  chainloader.old.asm  chainstage2.asm  stage2.asm
src/boot/chainloader/example/: oem_label.asm  sector_test.asm
src/boot/chainloader/tests/: graphics.asm  graphics2.asm
