[package]
name = "sapphire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
# std = ["alloc-shim/std"]
alloc = []

[dependencies]
tinyvec_string = "0.3.2"

[lib]
name = "sapphire"           # The name of the target.
path = "src/main.rs"    # The source file of the target.
edition = "2021"       # The edition of the target.
crate-type = ["staticlib"]   # The crate types to generate.
